# passport

./: .gitignore  LICENCE  README.md
.claude/: CLAUDE.md
.claude/rules/: IOG_BRAND_GUIDELINES.md  date_formatting.md  rust.md  serena.md  spelling.md
demo/: README.md
demo/mn-passport-foundations/: .env.example  (+6 more)
docs/: FEATURES.md  KNOWLEDGE_BASE.md  MIPS.md  PRINCIPLES.md  RESEARCH.md  arc42.md  delivery-plan.html  mvp-architecture.md  passport-plan.md  the-plan.html
experiments/redjubjub-wallet-rs/: .gitignore  Cargo.toml  README.md  test-e2e.sh
experiments/redjubjub-wallet-rs/.claude/: findings.md
experiments/redjubjub-wallet-rs/contracts/managed/schnorr-wallet/compiler/: contract-info.json
experiments/redjubjub-wallet-rs/contracts/managed/schnorr-wallet/contract/: index.d.ts  index.js  index.js.map
experiments/redjubjub-wallet-rs/contracts/managed/schnorr-wallet/keys/: deposit.prover  deposit.verifier  query_balance.prover  query_balance.verifier  register_owner.prover  register_owner.verifier  withdraw.verifier
experiments/redjubjub-wallet-rs/contracts/managed/schnorr-wallet/zkir/: deposit.bzkir  deposit.zkir  query_balance.bzkir  query_balance.zkir  register_owner.bzkir  register_owner.zkir  withdraw.bzkir  withdraw.zkir
experiments/redjubjub-wallet-rs/infra/: docker-compose.yml
experiments/redjubjub-wallet-rs/src/: circuits.rs  contract.rs  indexer.rs  main.rs  node.rs  proof_client.rs  prover.rs  schnorr.rs  wallet.rs
formal-spec/: Passport.agda  arc-passport.agda-lib  flake.nix
research/: README.md  architecture.md  features.md  pitfalls.md  stack.md  summary.md
site/: architecture.html  data.js  delivery-plan.html  demo.html  evolution.html  index.html  panel.js  parallelisation.html  shared.css  standards.html  the-plan.html
(+471 files in other folders)
