[package]
name = "redjubjub-wallet-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
# Midnight ledger crates (path deps from cloned repo)
midnight-base-crypto = { path = "../midnight-ledger/base-crypto" }
midnight-transient-crypto = { path = "../midnight-ledger/transient-crypto" }
midnight-onchain-runtime = { path = "../midnight-ledger/onchain-runtime" }
midnight-onchain-vm = { path = "../midnight-ledger/onchain-vm" }
midnight-onchain-state = { path = "../midnight-ledger/onchain-state" }
midnight-ledger = { path = "../midnight-ledger/ledger" }
midnight-zswap = { path = "../midnight-ledger/zswap" }
midnight-coin-structure = { path = "../midnight-ledger/coin-structure" }
midnight-serialize = { path = "../midnight-ledger/serialize" }
midnight-storage = { path = "../midnight-ledger/storage" }
midnight-storage-core = { path = "../midnight-ledger/storage-core" }
midnight-zkir = { path = "../midnight-ledger/zkir" }

# Midnight crypto crates (from crates.io via transient-crypto)
midnight-curves = "0.2.0"

# Curve / field arithmetic
ff = "0.13"
group = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / GraphQL clients
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# Randomness
rand = "0.8"
rand_chacha = "0.3"

# Hex encoding
hex = "0.4"
const-hex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
sha2 = "0.10"
